--- a/.azuredevops/resign.yml
+++ b/.azuredevops/resign.yml
@@ -1,6 +1,6 @@
 pool:
   vmImage: 'macOS-12'
-  
+
 name: $(Date:yyyyMMdd)$(Rev:.r)
 jobs:
   - job: iOS_Release
@@ -84,7 +84,7 @@ jobs:
             [
                   {
                       "KeyCode" : "CP-464234-Apple",
-                      "OperationCode" : "iOSAppSignVnext",
+                      "OperationCode" : "iOSAppSign",
                       "Parameters" : {},
                       "ToolName" : "sign",
                       "ToolVersion" : "1.0"
