--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,8 +1,19 @@
 #Thu Jul 23 15:19:15 GMT 2020
-FLIPPER_VERSION=0.99.0
+FLIPPER_VERSION=0.125.0
+# Use this property to specify which architecture you want to build.
+# You can also override it from the CLI using
+# ./gradlew <task> -PreactNativeArchitectures=x86_64
+reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
+# Use this property to enable support to the new architecture.
+# This will allow you to use TurboModules and the Fabric render in
+# your application. You should enable this flag either if you want
+# to write custom TurboModules/Fabric components OR use libraries that
+# are providing them.
+newArchEnabled=false
 android.enableJetifier=true
 VERSION_NAME=1.1.5
 android.useAndroidX=true
 org.gradle.daemon=true
 org.gradle.configureondemand=true
-org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=4096m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+# Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
