--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@react-navigation/native-stack": "^6.6.2",
     "buffer": "^5.6.0",
     "events": "^3.2.0",
-    "react": "^17.0.2",
-    "react-native": "^0.67.1",
+    "react": "^18.0.0",
+    "react-native": "^0.69.1",
     "react-native-azure-iotcentral-client": "1.1.7",
     "react-native-ble-plx": "^2.0.3",
     "react-native-camera": "^4.1.1",
@@ -31,7 +31,7 @@
     "react-native-gesture-handler": "^2.3.0",
     "react-native-get-random-values": "^1.4.0",
     "react-native-google-fit": "^0.18.2",
-    "react-native-health": "^1.10.0",
+    "react-native-health": "^1.12.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.9.2",
     "react-native-permissions": "^3.3.0",
@@ -57,16 +57,16 @@
     "@welldone-software/why-did-you-render": "^4.2.5",
     "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^7.14.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fs": "^0.0.1-security",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.66.2",
+    "metro-react-native-babel-preset": "^0.70.3",
     "prettier": "^2.3.2",
     "react-native-codegen": "0.0.7",
     "react-native-svg-transformer": "^1.0.0",
-    "react-test-renderer": "17.0.2",
+    "react-test-renderer": "^18.0.0",
     "typescript": "^4.4.2"
   },
   "jest": {
@@ -86,5 +86,10 @@
       "js"
     ],
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$"
+  },
+  "overrides": {
+    "react-native-google-fit": {
+      "moment": "2.29.4"
+    }
   }
 }
