--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,3 @@
-source 'https://github.com/CocoaPods/Specs.git'
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
@@ -11,6 +10,9 @@ pod 'RNCharts', :path => '../node_modules/react-native-charts-wrapper'
 
 target 'cpm' do
   config = use_native_modules!
+
+  # Flags change depending on the env values.
+  flags = get_default_flags()
 
   use_react_native!(
     :path => config[:reactNativePath],
